# mixy-firmware

./: CMakeLists.txt  LICENSE  README.md  nrf52840.resc  west.yml
.github/workflows/: build.yml  build_container.yml
app/: CMakeLists.txt  Kconfig  Kconfig.reset_interface  VERSION  logging.conf  midi_compat.conf  prj.conf  usb.conf
app/src/: ble_midi.c  ble_midi.h  main.c
app/src/utils/: serial_num.c  usbd_reset_register.c
drivers/: CMakeLists.txt  Kconfig
drivers/ext_power/: CMakeLists.txt  Kconfig  ext_power.c
drivers/pots/: CMakeLists.txt  Kconfig  Kconfig.pots  pots.c
drivers/sensor/: CMakeLists.txt
drivers/sensor/battery/: CMakeLists.txt  Kconfig  Kconfig.battery  battery_common.c  battery_common.h  battery_nrf_vddh.c
drivers/usbd_reset/: CMakeLists.txt  Kconfig  usbd_reset.c
dts/bindings/: mixy,ext-power.yaml  mixy,pots.yaml  mixy,reset.yaml  vendor-prefixes.txt
include/app/drivers/: ext_power.h  pots.h
zephyr/: module.yml
